test_case/rust-lang_rust/51242_393953002.rs
plain
[00:48:44] ...........................................................................i........................
[00:48:49] ....................................................................................................
[00:48:54] ....................................................................................................
[00:49:00] ....................................................................................................
[00:49:05] .......i.................iiiiiiiii...................................................
[00:49:05] 
[00:49:05] travis_fold:start:test_ui_nll
travis_time:start:test_ui_nll
Check compiletest suite=ui mode=ui compare_mode=nll (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
Check compiletest suite=ui mode=ui compare_mode=nll (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
[00:49:05] 
[00:49:05] running 1485 tests
[00:49:09] ...............................................F...........................................i........
[00:49:19] ....................................................................................................
[00:49:22] ....................................................................................................
[00:49:26] ....................................................................................................
[00:49:29] ....................................................................................................
---
[00:49:54] ...........................................................................i........................
[00:49:59] ....................................................................................................
[00:50:03] ....................................................................................................
[00:50:09] ....................................................................................................
[00:50:13] .......i.................iiiiiiiii...................................................
[00:50:13] 
[00:50:13] ---- [ui (nll)] ui/borrowck/mut-borrow-of-mut-ref.rs stdout ----
[00:50:13] diff of stderr:
[00:50:13] 
[00:50:13] 
[00:50:13] - error[E0596]: cannot borrow immutable argument `b` as mutable
[00:50:13] -   --> $DIR/mut-borrow-of-mut-ref.rs:18:12
[00:50:13] + error[E0596]: cannot borrow immutable item `b` as mutable
[00:50:13] +   --> $DIR/mut-borrow-of-mut-ref.rs:18:7
[00:50:13] 3    |
[00:50:13] 4 LL |     g(&mut b) //~ ERROR cannot borrow
[00:50:13] -    |            ^ cannot borrow mutably
[00:50:13] - help: consider removing the `&mut`, as it is an immutable bindingnnot borrow immutable item `b` as mutable","code":{"code":"E0596","explanation":"\nThis error occurs because you tried to mutably borrow a non-mutable variable.\n\nExample of erroneous code:\n\n